--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ recap = "^0.1.6"
 chess = "^1.6.1"
 osfclient = "^0.0.5"
 setuptools = "59.5.0"
+scikit-image = "0.18.3"
 
 [tool.poetry.dev-dependencies]
 jupyterlab = "^2.2.8"
